@@ -14,6 +14,8 @@ To be released as 0.12pre6 or 0.12rc1.
   systems.
 * bug 983: Give preference to the Content-Type specified in the HTTP
   header over that specified via the HTML meta tag.
+* bug 1084: Allow option names containing '+' and '*' in the option
+  manager.
 
 Bugs that should be removed from NEWS before the 0.12.0 release:
 
